--- a/templates/timer.html
+++ b/templates/timer.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
-<title> BreakPro Timer </title>
-
-
-This is where the timer will go!
+<html>
+  <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="/scripts/moment.min.js"></script>
+    <script src="/scripts/countdown.min.js"></script>
+    <script src="/scripts/moment-countdown.min.js"></script>
+    <title> BreakPro Timer </title>
+  </head>
+  <body>
+    <p>This is where the timer will go!</p>
+    <script>window.alert(moment("1982-5-25").countdown().toString();)</script>
+  </body>
+</html>
