--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -1,2 +1,13 @@
 <!-- This is the html for the log in page -->
-Log in!
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title> BreakPro Login Page </title>
+  </head>
+  <body>
+    Welcome to BreakPro!!
+    Log in!
+  </body>
+</html>
