--- a/templates/user_log.html
+++ b/templates/user_log.html
@@ -1,1 +1,13 @@
-Hello!  Welcome user!  Check out how you've been spending your breaks!
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title> Your Log </title>
+  </head>
+  <body>
+
+    Hello!  Welcome user!  Check out how you've been spending your breaks!
+
+  </body>
+</html>
