updated user log

--- a/templates/user_log.html
+++ b/templates/user_log.html
@@ -1,13 +1,54 @@
+<!-- I'VE INSERTED A FAKE ENTRY ENTRY -->
 
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title> Your Log </title>
   </head>
   <body>
 
-    Hello!  Welcome user!  Check out how you've been spending your breaks!
+    <h2>Hello!  Welcome user!  Check out how you've been spending your breaks!</h2>
+<br>
+<br>
+    <!DOCTYPE html>
 
-  </body>
+    <style>
+    table {
+        font-family: arial, sans-serif;
+        border-collapse: collapse;
+        width: 100%;
+    }
+
+    td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 8px;
+    }
+
+    tr:nth-child(even) {
+        background-color: #dddddd;
+    }
+    </style>
+    </head>
+    <body>
+
+    <table>
+      <tr>
+        <th>Log Entry</th>
+        <th>Date</th>
+        <th>Task</th>
+        <th>Number of Snoozes</th>
+        <th>Total Time on BreakPro</th>
+      </tr>
+      <tr>
+        <td>#1</td>
+        <td>7/25/16</td>
+        <td>Finish CSSI Final Project</td>
+        <td>5</td>
+        <td>30mins</td>
+      </tr>
+
+    </table>
+
+    </body>
 </html>
