Another timer attempt

--- a/templates/timer.html
+++ b/templates/timer.html
@@ -2,6 +2,7 @@
 
 <html>
   <head>
+    <link rel="stylesheet" href="/stylesheets/timer.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="/scripts/moment.min.js"></script>
     <script src="/scripts/countdown.min.js"></script>
@@ -22,12 +23,12 @@
       </div>
       <div>
         <span class="minutes"></span>
-        <div class="smalltext">Minutes</div>
-      </div>
-      <div>
-        <span class="seconds"></span>
-        <div class="smalltext">Seconds</div>
-      </div>
+      <div class="smalltext">Minutes</div>
     </div>
-  </body>
+    <div>
+      <span class="seconds"></span>
+      <div class="smalltext">Seconds</div>
+    </div>
+  </div>
+</body>
 </html>
