--- a/templates/timer.html
+++ b/templates/timer.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/stylesheets/timer.css">
   </head>
 <body>
-    <p>This is where the timer will go!</p>
+    <p>Break Timer</p>
     <div id="clockdiv">
       <div>
         <span class="minutes"></span>
