--- a/templates/main.html
+++ b/templates/main.html
@@ -6,18 +6,37 @@
   </head>
 
   <body>
-<h1> Welcome to breakpro <h1>
+    <div class= "top_bar">
+      <h1> break<span>pro</span> <h1>
+        <div class="line-separator"></div>
+    </div>
 
-<h3> What task are you working on?</h3>
+    <div class = "bob"> </div>
+
+    <div class = "section_one">
+       <h2>your <span>settings</span>:</h2>
+       <div class = "section_over"></div>
+    </div>
+    <div class = "section_two">
+      <h2>your <span>break</span>:</h2>
+      <div class = "section_over_two"></div>
+    </div>
+    <div class = "section_three">
+      <h2>your <span>friends</span>:</h2>
+      <div class = "section_over"></div>
+    </div>
+
+    <div class="clear"></div>
+
+    <h3> What task are you working on?</h3>
 
   <form method="post" action ="">
-    <h5>Enter your task: <input type="text" name="task"></h5><br><br>
+    <h4>Enter your task: <input type="text" name="task"></h4><br><br>
 
     <h3> How long is your break?</h3>
-    <h5>Enter your break length: <input type="text" name="break_length"/></h5><br><br>
-    <h3><input type="button" name="set_timer"> Set Timer<br><br>
-    <h3><input type="checkbox" name="add_friend"> Check here if you want to send a copy of your log to a friend!<br>
-    <p><input type="submit" value="Submit"></p>
+    <h4>Enter your break length: <input type="text" name="break_length"/></h4><br>
+
+    <p><input type="submit" value="Start Timer"></p>
 
     </form>
 
