Fixed up timer page

--- a/templates/timer.html
+++ b/templates/timer.html
@@ -6,6 +6,7 @@
   </head>
 <body>
     <p>Break Timer</p>
+    <button onclick="breakTimer(5)">Start Timer</button>
     <div id="clockdiv">
       <div>
         <span class="minutes"></span>
