--- a/templates/main.html
+++ b/templates/main.html
@@ -11,35 +11,50 @@
         <div class="line-separator"></div>
     </div>
 
-    <div class = "bob"> </div>
-
     <div class = "section_one">
        <h2>your <span>settings</span>:</h2>
-       <div class = "section_over"></div>
+       <div class = "section_over">
+         <br><br><img src="/images/settings.png" width="165">
+       </div>
     </div>
     <div class = "section_two">
-      <h2>your <span>break</span>:</h2>
-      <div class = "section_over_two"></div>
+      <h2>your <span>logs</span>:</h2>
+      <div class = "section_over_two">
+        <br><br><img src="/images/logs.png" width="185">
+      </div>
     </div>
     <div class = "section_three">
       <h2>your <span>friends</span>:</h2>
-      <div class = "section_over"></div>
+      <div class = "section_over">
+        <br><br><img src="/images/friends.png" width="175">
+      </div>
     </div>
 
     <div class="clear"></div>
 
-    <h3> What task are you working on?</h3>
+    <br>
+    <div class="line-separator"></div>
+    <br>
+    <h2 class = "break">your <span>break</span>:</h2>
+    <section class= "design_break">
+      <div class ="break_content">
+        <h3> What task are you working on?</h3>
 
-  <form method="post" action ="">
-    <h4>Enter your task: <input type="text" name="task"></h4><br><br>
+        <form method="post" action ="">
+        <h4>Enter your task: <input type="text" name="task"></h4><br><br>
 
-    <h3> How long is your break?</h3>
-    <h4>Enter your break length: <input type="text" name="break_length"/></h4><br>
+        <h3> How long is your break?</h3>
+        <h4>Enter your break length: <input type="text" name="break_length"/></h4><br>
 
-    <p><input type="submit" value="Start Timer"></p>
+        <p><input type="submit" value="Start Timer"></p>
 
-    </form>
-
+        </form>
+      </div>
+    </section>
+    <br>
+    <br>
+    <br>
+    <br>
   </body>
 
 </html>
