--- a/templates/alert.html
+++ b/templates/alert.html
@@ -1,1 +1,13 @@
-<button onclick="notifyMe()">Notify me</button>
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    <button onclick="notifyMe()">Notify me</button>
+
+    <script src = "/scripts/alerts.js"></script>
+  </body>
+</html>
