--- a/templates/alert.html
+++ b/templates/alert.html
@@ -2,12 +2,31 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="/stylesheets/alert.css">
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-    <button onclick="notifyMe()">Notify me</button>
+    <button id= "alert">Notify me</button>
+
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">x</span>
+        <p>Get back to work!</p>
+        <button id="ok">I will</button>
+        <button id="snooze">Just a little more breaktime...</button>
+      </div>
+
+    </div>
+
+
 
     <script src = "/scripts/alerts.js"></script>
+
+
   </body>
 </html>
