Updating CSS main

--- a/templates/main.html
+++ b/templates/main.html
@@ -11,22 +11,24 @@
         <div class="line-separator"></div>
     </div>
 
-    <div class = "section_one">
-       <h2>your <span>settings</span>:</h2>
-       <div class = "section_over">
-         <br><br><img src="/images/settings.png" width="165">
-       </div>
-    </div>
-    <div class = "section_two">
-      <h2>your <span>logs</span>:</h2>
-      <div class = "section_over_two">
-        <br><br><img src="/images/logs.png" width="185">
+    <div class = "container">
+      <div class = "section_one">
+         <h2>your <span>settings</span>:</h2>
+         <div class = "section_over">
+           <br><br><img src="/images/settings.png" width="165">
+         </div>
       </div>
-    </div>
-    <div class = "section_three">
-      <h2>your <span>friends</span>:</h2>
-      <div class = "section_over">
-        <br><br><img src="/images/friends.png" width="175">
+      <div class = "section_two">
+        <h2>your <span>logs</span>:</h2>
+        <div class = "section_over_two">
+          <br><br><img src="/images/logs.png" width="185">
+        </div>
+      </div>
+      <div class = "section_three">
+        <h2>your <span>friends</span>:</h2>
+        <div class = "section_over">
+          <br><br><img src="/images/friends.png" width="185">
+        </div>
       </div>
     </div>
 
@@ -55,6 +57,7 @@
     <br>
     <br>
     <br>
+    <div class = "gradient"> </div>
   </body>
 
 </html>
