--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -11,7 +11,7 @@ h2{
   text-align: center;
 }
 h2 span {
- color: rgb(255, 161, 12);
+ color: rgb(251, 120, 53);
 }
 
 .break{
@@ -25,6 +25,11 @@ margin-left: 450px;
 margin-right: 450px;
 }
 
+.container{
+  display: flex;
+  justify-content: center;
+}
+
 .section_one{
   background-color: rgb(94, 230, 237);
   height: 325px;
@@ -33,8 +38,7 @@ margin-right: 450px;
   margin-left: 80px;
   float: left;
   border-radius: 25px;
-
-  text-align: center;
+  display: inline-block;
 }
 .section_two{
   background-color: rgb(18, 214, 217);
@@ -43,6 +47,7 @@ margin-right: 450px;
   margin: 45px;
   float: left;
   border-radius: 25px;
+  display: inline-block;
 }
 .section_three{
   background-color: rgb(94, 230, 237);
@@ -51,6 +56,7 @@ margin-right: 450px;
   margin: 45px;
   float: left;
   border-radius: 25px;
+  display: inline-block;
 }
 
 .section_over{
@@ -66,6 +72,12 @@ margin-right: 450px;
   width: 225px;
   margin-left: 40px;
   border-radius: 25px;
+}
+
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .clear{
@@ -89,3 +101,7 @@ h3{
 h4{
   font-size: 19px;
 }
+/*
+body{
+  background: linear-gradient(0deg, rgba(0,0,255,1), rgba(0,0,255,0));
+} */
