--- a/templates/timer.html
+++ b/templates/timer.html
@@ -17,6 +17,18 @@
         <div class="smalltext">Seconds</div>
       </div>
     </div>
+    <div id="myModal" class="modal">
+
+      <!-- Modal content -->
+      <div class="modal-content">
+        <span class="close">x</span>
+        <p>Get back to work!</p>
+        <button id="ok">I will</button>
+        <button id="snooze">Just a little more breaktime...</button>
+      </div>
+
+    </div>
+  <script src="/scripts/alerts.js"></script>
   <script src="/scripts/timer.js"></script>
 </body>
 </html>
