Added settings link

--- a/templates/main.html
+++ b/templates/main.html
@@ -15,7 +15,7 @@
       <div class = "section_one">
          <h2>your <span>settings</span>:</h2>
          <div class = "section_over">
-           <br><br><img src="/images/settings.png" width="165">
+           <br><br><a href="settings"><img src="/images/settings.png" width="165"></a>
          </div>
       </div>
       <div class = "section_two">
