Fixed main page links

--- a/templates/main.html
+++ b/templates/main.html
@@ -21,13 +21,13 @@
       <div class = "section_two">
         <h2>your <span>logs</span>:</h2>
         <div class = "section_over_two">
-          <br><br><img src="/images/logs.png" width="185">
+          <br><br><a href="user_log"><img src="/images/logs.png" width="185"></a>
         </div>
       </div>
       <div class = "section_three">
         <h2>your <span>friends</span>:</h2>
         <div class = "section_over">
-          <br><br><img src="/images/friends.png" width="185">
+          <br><br><a href="friends"><img src="/images/friends.png" width="185"></a>
         </div>
       </div>
     </div>
