--- a/stylesheets/timer.css
+++ b/stylesheets/timer.css
@@ -35,3 +35,89 @@
     text-decoration: none;
     cursor: pointer;
 }
+
+/*
+body{
+  background: linear-gradient(0deg, rgba(164,230,237,1), rgba(164,230,237,0));
+}
+*/
+h1.break{
+  text-align: center;
+  font-size: 42px;
+}
+h1.break span {
+ color: rgb(255, 161, 12);
+}
+
+h2{
+  text-align: center;
+}
+h2 span {
+ color: rgb(251, 120, 53);
+}
+
+h3{
+  font-size: 23px;
+}
+h4{
+  font-size: 19px;
+}
+
+.line-separator{
+height:5px;
+border-bottom:5px solid rgb(25, 216, 227);
+margin-left: 450px;
+margin-right: 450px;
+}
+
+.timer_letter{
+  margin-left: 300px;
+}
+
+
+/*
+.container{
+  display: flex;
+  justify-content: center;
+}
+
+.section_one{
+  background-color: rgb(94, 230, 237);
+  height: 325px;
+  width: 275px;
+  margin: 45px;
+  margin-left: 80px;
+  float: left;
+  border-radius: 25px;
+  display: inline-block;
+}
+
+.section_over{
+  background-color: white;
+  height: 225px;
+  width: 200px;
+  margin-left: 38px;
+  border-radius: 25px;
+}
+
+
+img{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.clear{
+  clear: both;
+}
+
+.design_break{
+  border: 5px solid orange;
+  border-radius: 25px;
+  margin-left: 350px;
+  margin-right: 350px;
+}
+
+.break_content{
+  text-align: center;
+}*/
