--- a/templates/main.html
+++ b/templates/main.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="/stylesheets/stylesheet.css">
+    <title>breakpro</title>
   </head>
 
   <body>
