Working on Google login.

--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -9,5 +9,8 @@
   <body>
     Welcome to BreakPro!!
     Log in!
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="3337014412-ff1qtmktao4r3u2ksdq1ilu6c8gjkhm9.apps.googleusercontent.com">
   </body>
 </html>
