--- a/templates/timer.html
+++ b/templates/timer.html
@@ -13,7 +13,7 @@
     <br>
     <br>
 
-    <div class = "timer_letter">
+    <div class = "timer_letters">
       <h1>T </h1>
       <h1>I </h1>
       <h1>M </h1>
@@ -21,9 +21,9 @@
       <h1>R </h1>
     </div>
 
-    <div>
+    <div class = "container">
       <div id="clockdiv">
-        <div class = "minute_seconds">
+        <div>
           <span class="minutes"></span>
           <div class="smalltext">Minutes</div>
         </div>
@@ -33,6 +33,8 @@
         </div>
       </div>
     </div>
+
+    <div class="clear"></div>
 
     <div id="myModal" class="modal">
       <!-- Modal content -->
