--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,3 +1,7 @@
+body{
+  background: linear-gradient(0deg, rgba(164,230,237,1), rgba(164,230,237,0));
+}
+
 h1{
   text-align: center;
   font-size: 42px;
