--- a/stylesheets/timer.css
+++ b/stylesheets/timer.css
@@ -41,6 +41,9 @@ body{
   background: linear-gradient(0deg, rgba(164,230,237,1), rgba(164,230,237,0));
 }
 */
+body{
+  background: linear-gradient(0deg, rgba(164,230,237,1), rgba(164,230,237,0));
+}
 h1.break{
   text-align: center;
   font-size: 42px;
@@ -64,31 +67,20 @@ h4{
 }
 
 .line-separator{
-height:5px;
-border-bottom:5px solid rgb(25, 216, 227);
-margin-left: 450px;
-margin-right: 450px;
+  height:5px;
+  border-bottom:5px solid rgb(25, 216, 227);
+  width: 323px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .timer_letters{
-  margin-left: 300px;
+  margin-left: auto;
   float: left;
+  position: absolute;
+  left: 260px;
 }
 
-.container{
-  display: flex;
-  justify-content: center;
-}
-
-#clockdiv{
-  text-align: center;
-  float: left;
-}
-
-.clear{
-  clear: both;
-
-/*
 .container{
   display: flex;
   justify-content: center;
@@ -96,14 +88,37 @@ margin-right: 450px;
 
 .section_one{
   background-color: rgb(94, 230, 237);
-  height: 325px;
-  width: 275px;
-  margin: 45px;
-  margin-left: 80px;
-  float: left;
+  height: 305px;
+  width: 575px;
+  margin-left: auto;
+  margin-right: auto;
   border-radius: 25px;
-  display: inline-block;
+  border: 4px solid rgb(51, 51, 51);
+  float: left;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
+#clockdiv{
+  font-size: 75px;
+}
+
+.minutes, .seconds{
+  font-size: 80px;
+}
+
+.clear{
+  clear: both;
+}
+
+/*
+.container{
+  display: flex;
+  justify-content: center;
+}
+
+
 
 .section_over{
   background-color: white;
