--- a/templates/timer.html
+++ b/templates/timer.html
@@ -3,6 +3,7 @@
 
   <head>
     <link rel="stylesheet" href="/stylesheets/timer.css">
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
   </head>
 
   <body onload="breakTimer({{timer.break_length}}, {{timer.reminder_frequency}}, {{timer.reminder_amount}})">
@@ -13,25 +14,22 @@
     <br>
     <br>
 
-    <div class = "timer_letters">
-      <h1>T </h1>
-      <h1>I </h1>
-      <h1>M </h1>
-      <h1>E </h1>
-      <h1>R </h1>
-    </div>
+      <div class = "timer_letters">
+        <h1>T </h1>
+        <h1>I </h1>
+        <h1>M </h1>
+        <h1>E </h1>
+        <h1>R </h1>
+      </div>
 
     <div class = "container">
-      <div id="clockdiv">
-        <div>
-          <span class="minutes"></span>
-          <div class="smalltext">Minutes</div>
+      <div class = "section_one">
+
+        <div id="clockdiv">
+            <span class="minutes"></span>:
+            <span class="seconds"></span>
+          </div>
         </div>
-        <div>
-          <span class="seconds"></span>
-          <div class="smalltext">Seconds</div>
-        </div>
-      </div>
     </div>
 
     <div class="clear"></div>
@@ -45,6 +43,28 @@
         <button id="snooze">Just a little more breaktime...</button>
       </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+
+
 
     <script src="/scripts/alerts.js"></script>
     <script src="/scripts/timer.js"></script>
