Started on user system.

--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -4,13 +4,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title> BreakPro Login Page </title>
+    <title> breakpro Login Page </title>
   </head>
   <body>
-    Welcome to BreakPro!!
+    Welcome to breakpro!
     Log in!
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta name="google-signin-client_id" content="3337014412-ff1qtmktao4r3u2ksdq1ilu6c8gjkhm9.apps.googleusercontent.com">
   </body>
 </html>
