--- a/templates/main.html
+++ b/templates/main.html
@@ -44,7 +44,7 @@
         <h3> What task are you working on?</h3>
 
         <form method="post" action ="">
-        <h4>Enter your task: <input type="text" name="task"></h4><br><br>
+        <h4>Enter your task: <input type="text" name="task"></h4><br>
 
         <h3>How long is your break?</h3>
         <h4>Enter your break length (minutes): <input type="number" min="1" name="break_length"></h4><br>
