--- a/templates/settings.html
+++ b/templates/settings.html
@@ -3,7 +3,7 @@
 
 <html>
   <head>
-    <title>Settings</title>
+    <title>User Settings</title>
     <style>
 
     h1{
@@ -33,6 +33,10 @@
       <input type="radio" name="snoozes" value="7">7
 
       <h3>Would you like a copy of your logs e-mailed to you?</h3>
+      <input type="radio" name="email_option" value="yes">yes
+      <input type="radio" name="email_option" value="no">no
+
+      <h3>Would you like a copy of your logs e-mailed to your friends?</h3>
       <input type="radio" name="email_option" value="yes">yes
       <input type="radio" name="email_option" value="no">no
 
