--- a/templates/timer.html
+++ b/templates/timer.html
@@ -4,6 +4,7 @@
   <head>
     <link rel="stylesheet" href="/stylesheets/timer.css">
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+    <title>timer</title>
   </head>
 
   <body onload="breakTimer({{timer.break_length}}, {{timer.reminder_frequency}}, {{timer.reminder_amount}})">
