--- a/templates/user_log.html
+++ b/templates/user_log.html
@@ -3,52 +3,69 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Your Log </title>
+    <link rel="stylesheet" href="/stylesheets/ulogs.css">
+    <title>your log</title>
   </head>
+
   <body>
+    <h1> break<span>pro</span> <h1>
+    <div class="line-separator"></div>
+    <br>
+    <h2>how you've been spending your breaks:</h2>
+    <br>
+    <div class = "table_container">
+      <table>
+        <tr>
+          <th>Log Entry</th>
+          <th>Date</th>
+          <th>Task</th>
+          <th>Number of Snoozes</th>
+          <th>Total Time on BreakPro</th>
+        </tr>
+        <tr>
+          <td>#1</td>
+          <td>7/25/16</td>
+          <td>Finish CSSI Final Project</td>
+          <td>5</td>
+          <td>30mins</td>
+        </tr>
+        <tr>
+          <td>#2</td>
+          <td>7/26/16</td>
+          <td>Study for AP Calc Test</td>
+          <td>8</td>
+          <td>60mins</td>
+        </tr>
+        <tr>
+          <td>#3</td>
+          <td>7/26/16</td>
+          <td>Catch 3 Pikachus</td>
+          <td>2</td>
+          <td>20mins</td>
+        </tr>
 
-    <h2>Hello!  Welcome user!  Check out how you've been spending your breaks!</h2>
-<br>
-<br>
-    <!DOCTYPE html>
-
-    <style>
-    table {
-        font-family: arial, sans-serif;
-        border-collapse: collapse;
-        width: 100%;
-    }
-
-    td, th {
-        border: 1px solid #dddddd;
-        text-align: left;
-        padding: 8px;
-    }
-
-    tr:nth-child(even) {
-        background-color: #dddddd;
-    }
-    </style>
-    </head>
-    <body>
-
-    <table>
-      <tr>
-        <th>Log Entry</th>
-        <th>Date</th>
-        <th>Task</th>
-        <th>Number of Snoozes</th>
-        <th>Total Time on BreakPro</th>
-      </tr>
-      <tr>
-        <td>#1</td>
-        <td>7/25/16</td>
-        <td>Finish CSSI Final Project</td>
-        <td>5</td>
-        <td>30mins</td>
-      </tr>
-
-    </table>
+      </table>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     </body>
 </html>
