--- a/templates/main.html
+++ b/templates/main.html
@@ -47,7 +47,7 @@
         <h4>Enter your task: <input type="text" name="task"></h4><br>
 
         <h3>How long is your break?</h3>
-        <h4>Enter your break length (minutes): <input type="number" min="1" name="break_length"></h4><br>
+        <h4>Enter your break length (minutes): <input type="number" min="1" max="120" name="break_length"></h4><br>
 
         <h3>How many reminders do you want?</h3>
         <h4>Enter an amount of reminders (number): <input type="number" min="0" name="reminder_amount"></h4><br>
