In the process of changing main.html

--- a/templates/main.html
+++ b/templates/main.html
@@ -21,7 +21,7 @@
       </div>
       <div class = "section_two">
         <h2>your <span>logs</span>:</h2>
-        <div class = "section_over_two">
+        <div class = "section_over">
           <br><br><a href="user_log"><img src="/images/logs.png" width="185"></a>
         </div>
       </div>
