--- a/templates/user_log.html
+++ b/templates/user_log.html
@@ -14,41 +14,45 @@
     <h2>how you've been spending your breaks:</h2>
     <br>
     <div class = "table_container">
+      <br>
+      <br>
       <table>
-        <tr>
-          <th>Log Entry</th>
-          <th>Date</th>
-          <th>Task</th>
-          <th>Number of Snoozes</th>
-          <th>Total Time on BreakPro</th>
+        <tr >
+          <th class = "first_row"> Log Entry</th>
+          <th class = "first_row"> Date</th>
+          <th class = "first_row"> Task</th>
+          <th class = "first_row"> Number of Snoozes</th>
+          <th class = "first_row"> Total Time on breakpro</th>
         </tr>
-        <tr>
+        <tr class = "logs">
           <td>#1</td>
           <td>7/25/16</td>
           <td>Finish CSSI Final Project</td>
           <td>5</td>
-          <td>30mins</td>
+          <td>30 mins</td>
         </tr>
-        <tr>
+        <tr class = "logs">
           <td>#2</td>
           <td>7/26/16</td>
           <td>Study for AP Calc Test</td>
           <td>8</td>
-          <td>60mins</td>
+          <td>60 mins</td>
         </tr>
-        <tr>
+        <tr class = "logs">
           <td>#3</td>
           <td>7/26/16</td>
           <td>Catch 3 Pikachus</td>
           <td>2</td>
-          <td>20mins</td>
+          <td>20 mins</td>
         </tr>
 
       </table>
+      <br>
+      <br>
+      <br>
+      <br>
+
     </div>
-    <br>
-    <br>
-    <br>
     <br>
     <br>
     <br>
