--- a/stylesheets/ulogs.css
+++ b/stylesheets/ulogs.css
@@ -25,8 +25,12 @@ margin-right: auto;
 }
 
 .table_container{
-  padding-left: 6%;
-  padding-right: 6%;
+  padding-left: 4%;
+  padding-right: 4%;
+  border: 4px solid rgb(255, 161, 12);
+  border-radius: 20px;
+  margin-left: 7%;
+  margin-right: 7%;
 }
 
 table {
@@ -36,11 +40,15 @@ table {
 }
 
 td, th {
-    border: 2px solid rgb(25, 216, 227);
-    text-align: left;
-    padding: 8px;
+  font-size: 17px;
+  border-bottom: 2px solid rgb(13, 13, 13);
+  text-align: left;
+  padding: 15px;
 }
 
-tr:nth-child(even) {
-    background-color: rgb(255, 224, 179);
+.first_row{
+  font-size: 19px;
+  font-weight: bold;
 }
+
+.logs:hover {background-color: rgb(140, 237, 242)}
