--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -77,6 +77,10 @@ margin-right: auto;
   margin-left: 38px;
   border-radius: 25px;
 }
+ /*
+ height: 375px;
+ width: 315px;
+ */
 
 img{
   display: block;
