--- a/templates/main.html
+++ b/templates/main.html
@@ -49,6 +49,17 @@
         <h3>How long is your break?</h3>
         <h4>Enter your break length (minutes): <input type="number" min="1" max="120" name="break_length"></h4><br>
 
+        <h3> Check an option below if you would like reminders set during your break </h3>
+                     (check as many options as necessary)
+        <form action="">
+        <input type="checkbox" name="vehicle" value="Bike">I have a bike<br>
+        <input type="checkbox" name="vehicle" value="Car">I have a car<br>
+        <input type="checkbox" name="vehicle" value="Bike">I have a bike<br>
+        <input type="checkbox" name="vehicle" value="Car">I have a car<br>
+        <input type="checkbox" name="vehicle" value="Bike">I have a bike<br>
+        <input type="checkbox" name="vehicle" value="Car">I have a car
+        </form>
+
         <h3>How many reminders do you want?</h3>
         <h4>Enter an amount of reminders (number): <input type="number" min="0" name="reminder_amount"></h4><br>
 
