--- a/templates/settings.html
+++ b/templates/settings.html
@@ -19,8 +19,16 @@
 
     <form action ="/" method="post">
 
-      <h3>How often do you want reminders sent?<br></h3>
-      <h4>Every <input type="number" min="1" name="remind_length"/> minutes </h4>
+      <h3> Check an option below if you would like reminders set during your break </h3>
+                   (check as many options as necessary)
+      <form action="">
+      <input type="checkbox" name="reminder" value="1/2">Remind me when my break is halfway over<br>
+      <input type="checkbox" name="reminder" value="1/3">Remind me when my break is a third of the way over<br>
+      <input type="checkbox" name="reminder" value="1/4">Remind me when my break is a fourth of the way over<br>
+      <input type="checkbox" name="reminder" value="1/5">Remind me when my break is a fourth of the way over<br>
+      <input type="checkbox" name="reminder" value="0">No thank you, I don't want any reminders sent on my break
+      </form>
+
       <h3>What type of reminder messages do you want to receive?: <br></h3>
         <input type="radio" name="message_type" value="nice">Nice
         <input type="radio" name="message_type" value="mean">Mean
