Fixed merge conflicts

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -36,8 +36,8 @@
       <input type="radio" name="email_option" value="no">no
 
       <h3>Would you like a copy of your logs e-mailed to your friends?</h3>
-      <input type="radio" name="email_option" value="yes">yes
-      <input type="radio" name="email_option" value="no">no
+      <input type="radio" name="email_option_friend" value="yes">yes
+      <input type="radio" name="email_option_friend" value="no">no
 
 
       <p><input type="submit" value="Submit"></p>
