--- a/templates/settings.html
+++ b/templates/settings.html
@@ -17,7 +17,7 @@
 
     <h2>Let's personalize your breaks like a Pro!</h2>
 
-    <form action ="/" method="post">
+    <form method="post" action="" >
 
       <h3> Check an option below if you would like reminders set during your break </h3>
                    (check as many options as necessary)
@@ -48,7 +48,7 @@
       <input type="radio" name="email_option_friend" value="no">no
 
 
-      <p><input type="submit" value="Submit"></p>
+      <p><input type="submit" value="submit"></p>
 
     </form>
 
