add friends page

--- a/templates/friends.html
+++ b/templates/friends.html
@@ -2,5 +2,10 @@
 <html>
   <body>
     <p>Your Friends</p>
+
+
+<form method="post" action ="">
+<p><input class = "submit_button" type="submit" value="Add Friends"></p><br>
+    </form>
   </body>
 </html>
