--- a/templates/main.html
+++ b/templates/main.html
@@ -13,19 +13,19 @@
     </div>
 
     <div class = "container">
-      <div class = "section_one">
+      <div class = "section_one" id="pops">
          <h2>your <span>settings</span>:</h2>
          <div class = "section_over">
            <br><br><a href="settings"><img src="/images/settings.png" width="165"></a>
          </div>
       </div>
-      <div class = "section_two">
+      <div class = "section_two" id="pops">
         <h2>your <span>logs</span>:</h2>
         <div class = "section_over">
           <br><br><a href="user_log"><img src="/images/logs.png" width="185"></a>
         </div>
       </div>
-      <div class = "section_three">
+      <div class = "section_three" id="pops">
         <h2>your <span>friends</span>:</h2>
         <div class = "section_over">
           <br><br><a href="friends"><img src="/images/friends.png" width="185"></a>
@@ -35,6 +35,7 @@
 
     <div class="clear"></div>
 
+    <br>
     <br>
     <div class="line-separator"></div>
     <br>
