--- a/stylesheets/ulogs.css
+++ b/stylesheets/ulogs.css
@@ -1,6 +1,6 @@
 
 body{
-  background: linear-gradient(0deg, rgba(164,230,237,1), rgba(164,230,237,0));
+  background: linear-gradient(0deg, rgba(149,236,236,1), rgba(149,236,236,0));
 }
 
 h1{
@@ -17,14 +17,15 @@ h2{
 }
 
 .line-separator{
-height:5px;
-border-bottom:5px solid rgb(25, 216, 227);
-width: 323px;
-margin-left: auto;
-margin-right: auto;
+  height:5px;
+  border-bottom:5px solid rgb(25, 216, 227);
+  width: 323px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .table_container{
+  background-color: rgba(255,255,255,0.4);
   padding-left: 4%;
   padding-right: 4%;
   border: 4px solid rgb(255, 161, 12);
@@ -47,6 +48,7 @@ td, th {
 }
 
 .first_row{
+  color: rgb(43, 178, 212);
   font-size: 19px;
   font-weight: bold;
 }
