--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,6 @@
       <h1> break<span>pro</span> <h1>
         <div class="line-separator"></div>
     </div>
-
     <div class = "container">
       <div class = "section_one" id="pops">
          <h2>your <span>settings</span>:</h2>
@@ -35,7 +34,7 @@
 
     <div class="clear"></div>
 
-    <br>
+    <div class = "logout_link"><a href="{{logout}}">Logout</a></div>
     <br>
     <div class="line-separator"></div>
     <br>
@@ -65,7 +64,7 @@
     <br>
     <br>
     <br>
-    <div class = "gradient"> </div>
+    <div class ="gradient"> </div>
   </body>
 
 </html>
