beginning the login page

--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -3,11 +3,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title> breakpro Login Page </title>
+    <link rel="stylesheet" href="/stylesheets/login.css">
+    <title>login in </title>
   </head>
+
   <body>
-    Welcome to breakpro!
-    Log in!
+    <h1> break<span>pro</span> <h1>
+    <div class="line-separator"></div>
+      <br>
+      <br>
+    <h3>Welcome to breakpro!</h3>
+    <h3>Log in!</h3>
+    <a href="{{login}}">Sign In</a>
   </body>
+
 </html>
