--- a/templates/settings.html
+++ b/templates/settings.html
@@ -3,12 +3,27 @@
 
 <html>
   <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script>
+    $(document).ready(setup);
+    function setup() {
+      $("input:radio[name=reminder]").click(function() {
+        var reminder = $(this).val();
+        console.log(reminder)
+      });
+      $("input:radio[name=message_type]").click(function() {
+        var message_type = $(this).val();
+        console.log(message_type)
+      });
+      $("input:radio[name=snoozes]").click(function() {
+        var snoozes = $(this).val();
+        console.log(snoozes)
+      });
+    }
+    </script>
     <title>User Settings</title>
     <style>
-
-    h1{
-      text-align: center;
-    }
+    h1{text-align: center;}
     </style>
   </head>
 
@@ -19,8 +34,8 @@
 
     <form method="post" action="" >
 
-      <h3> Check an option below if you would like reminders set during your break </h3>
-                   <h4>(check as many options as necessary)</h4><br>
+      <h3> Check an option below if you would like reminders sent during your break </h3>
+                   <h4>(check as many options as necessary)</h4>
       <form action="">
       <input type="radio" name="reminder" value="1/2">Remind me when my break is halfway over<br>
       <input type="radio" name="reminder" value="1/3">Remind me when my break is a third of the way over<br>
@@ -37,15 +52,6 @@
       <input type="radio" name="snoozes" value="3">3
       <input type="radio" name="snoozes" value="5">5
       <input type="radio" name="snoozes" value="7">7
-
-      <h3>Would you like a copy of your logs e-mailed to you?</h3>
-      <input type="radio" name="email_option" value="yes">yes
-      <input type="radio" name="email_option" value="no">no
-
-      <h3>Would you like a copy of your logs e-mailed to your friends?</h3>
-      <input type="radio" name="email_option_friend" value="yes">yes
-      <input type="radio" name="email_option_friend" value="no">no
-
 
       <p><input type="submit" value="submit"></p>
 
