--- a/templates/settings.html
+++ b/templates/settings.html
@@ -37,10 +37,10 @@
       <h3> Check an option below if you would like reminders sent during your break </h3>
                    <h4>(check as many options as necessary)</h4>
       <form action="">
-      <input type="radio" name="reminder" value="1/2">Remind me when my break is halfway over<br>
-      <input type="radio" name="reminder" value="1/3">Remind me when my break is a third of the way over<br>
-      <input type="radio" name="reminder" value="1/4">Remind me when my break is a fourth of the way over<br>
-      <input type="radio" name="reminder" value="0">No thank you, I don't want any reminders sent on my break
+      <input type="radio" name="reminder" id= "half_reminder" value="1/2">Remind me when my break is halfway over<br>
+      <input type="radio" name="reminder" id="third_reminder" value="1/3">Remind me when my break is a third of the way over<br>
+      <input type="radio" name="reminder" id="fourth_reminder" value="1/4">Remind me when my break is a fourth of the way over<br>
+      <input type="radio" name="reminder" id="no_reminder" value="0">No thank you, I don't want any reminders sent on my break
       </form>
 
       <h3>What type of reminder messages do you want to receive?: <br></h3>
