--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -8,12 +8,20 @@
   </head>
 
   <body>
-    <h1> break<span>pro</span> <h1>
+    <h1> break<span>pro</span> </h1>
     <div class="line-separator"></div>
-      <br>
-      <br>
-    <h3>Welcome to breakpro!</h3>
-    <h3>Log in!</h3>
+    <br>
+    <br>
+
+    <div class = "container">
+      <div class = "section_one">
+        <h2>sign <span>in</span>:</h2>
+        <div class = "section_over">
+          <img src="/images/settings.png" width="165">
+        </div>
+      </div>
+    </div>
+
     <a href="{{login}}">Sign In</a>
   </body>
 
