--- a/templates/settings.html
+++ b/templates/settings.html
@@ -4,35 +4,7 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script>
-    $(document).ready(setup);
-    function setup() {
-      $("input:checkbox[id=half_reminder]").click(function() {
-        var half = $(this).prop('checked')
-        console.log(half)
-      });
-      $("input:checkbox[id=third_reminder]").click(function() {
-        var third = $(this).prop('checked')
-        console.log(third)
-      });
-      $("input:checkbox[id=fourth_reminder]").click(function() {
-        var fourth = $(this).prop('checked')
-        console.log(fourth)
-      });
-      $("input:checkbox[id=no_reminder]").click(function() {
-        var no_reminder = $(this).prop('checked')
-        console.log(no_reminder)
-      });
-      $("input:radio[name=message_type]").click(function() {
-        var message_type = $(this).val();
-        console.log(message_type)
-      });
-      $("input:radio[name=snoozes]").click(function() {
-        var snoozes = $(this).val();
-        console.log(snoozes)
-      });
-    }
-    </script>
+    <script src="/scripts/settings_jquery.js"></script>
     <title>User Settings</title>
     <style>
     h1{text-align: center;}
