--- a/stylesheets/login.css
+++ b/stylesheets/login.css
@@ -1,3 +1,7 @@
+body{
+  background: linear-gradient(0deg, rgba(149,236,236,1), rgba(149,236,236,0));
+}
+
 h1{
   text-align: center;
   font-size: 42px;
@@ -28,16 +32,16 @@ margin-right: auto;
 
 .section_one{
   background-color: rgb(25, 219, 230);
-  height: 325px;
-  width: 275px;
+  height: 400px;
+  width: 350px;
   margin: 45px;
   border-radius: 25px;
 }
 .section_over{
   background-color: white;
-  height: 225px;
-  width: 200px;
-  margin-left: 38px;
+  height: 290px;
+  width: 270px;
+  margin-left: 40px;
   border-radius: 25px;
 }
 
