--- a/templates/log_in.html
+++ b/templates/log_in.html
@@ -17,12 +17,20 @@
       <div class = "section_one">
         <h2>sign <span>in</span>:</h2>
         <div class = "section_over">
-          <img src="/images/settings.png" width="165">
+          <a href="{{login}}"><img src="/images/sign.png" width="185"></a>
         </div>
       </div>
     </div>
+    <br>
+    <div class="line-separator"></div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-    <a href="{{login}}">Sign In</a>
   </body>
 
 </html>
