User model up and running

--- a/templates/main.html
+++ b/templates/main.html
@@ -11,6 +11,7 @@
       <h1> break<span>pro</span> <h1>
         <div class="line-separator"></div>
     </div>
+    <h4 class ="email"> {{email}}</h4>
     <div class = "container">
       <div class = "section_one">
          <h2>your <span>settings</span>:</h2>
