--- a/templates/timer.html
+++ b/templates/timer.html
@@ -40,7 +40,7 @@
       <div class="modal-content">
         <span class="close">x</span>
         <p>Get back to work!</p>
-        <button id="ok">I will</button>
+        <button id="ok">I will!</button>
         <button id="snooze">Just a little more breaktime...</button>
       </div>
     </div>
