--- a/templates/main.html
+++ b/templates/main.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="/scripts/main_jquery.js"></script>
     <link rel="stylesheet" href="/stylesheets/stylesheet.css">
     <title>breakpro</title>
   </head>
