--- a/templates/settings.html
+++ b/templates/settings.html
@@ -21,10 +21,10 @@
       <h3> Check an option below if you would like reminders sent during your break </h3>
                    <h4>(check as many options as necessary)</h4>
       <form action="">
-      <input type="checkbox" name="reminder" id="half_reminder" value="1/2">Remind me when my break is halfway over!<br>
-      <input type="checkbox" name="reminder" id="third_reminder" value="1/3">Remind me when my break is a third of the way over!<br>
-      <input type="checkbox" name="reminder" id="fourth_reminder" value="1/4">Remind me when my break is a fourth of the way over!<br>
-      <input type="checkbox" name="reminder" id="no_reminder" value="0">No thank you, I don't want any reminders sent on my break!
+      <input type="checkbox" name="reminder" id="half_reminder" value="1/2">Remind me when my break is halfway over<br>
+      <input type="checkbox" name="reminder" id="third_reminder" value="1/3">Remind me when my break is a third of the way over<br>
+      <input type="checkbox" name="reminder" id="fourth_reminder" value="1/4">Remind me when my break is a fourth of the way over<br>
+      <input type="checkbox" name="reminder" id="no_reminder" value="0">No thank you, I don't want any reminders sent on my break
       </form>
 
       <h3>What type of reminder messages do you want to receive?: <br></h3>
@@ -32,10 +32,10 @@
         <input type="radio" name="message_type" value="mean">Mean
         <input type="radio" name="message_type" value="funny">Funny
 
-      <h3>How many times will you allow yourself to "snooze"?</h3>
-      <input type="radio" name="snoozes" value="3">3
-      <input type="radio" name="snoozes" value="5">5
-      <input type="radio" name="snoozes" value="7">7
+      <h3>Time each "snooze" lasts?</h3>
+      <input type="radio" name="snoozes" value="5">5 Minutes
+      <input type="radio" name="snoozes" value="10">10 Minutes
+      <input type="radio" name="snoozes" value="15">15 Minutes
 
       <p><input type="submit" value="submit"></p>
 
