changed wording of home page

--- a/templates/main.html
+++ b/templates/main.html
@@ -52,10 +52,11 @@
         <h3>How long is your break?</h3>
         <h4>Enter your break length (minutes): <input type="number" min="1" max="60" name="break_length"></h4><br>
 
-        <h3>How many reminders do you want?</h3>
+        <h3>How many times will you allow yourself to snooze?</h3>
+        <h4>(We get it, sometimes you "just need five more minutes")<h4>
         <h4>Enter an amount of reminders (number): <input type="number" min="0" name="reminder_amount"></h4><br>
 
-        <h3>How frequently do you want to be reminded?</h3>
+        <h3>How long do you want each 'snooze' to last?</h3>
         <h4>(I want to recieve an alert every 'n' minutes): <input type="number" min="0" name="reminder_frequency"></h4><br>
 
 
