Fixed merge conflicts?

--- a/templates/main.html
+++ b/templates/main.html
@@ -46,7 +46,7 @@
       <div class ="break_content">
         <h3> What task are you working on?</h3>
 
-        <form method="post" action ="">
+        <form id="mainform" method="post" action ="">
         <h4>Enter your task: <input type="text" name="task"></h4><br>
 
         <h3>How long is your break?</h3>
