Timer info wiredgit add .git add .

--- a/templates/user_log.html
+++ b/templates/user_log.html
@@ -56,6 +56,9 @@
     <br>
     <br>
     <br>
+    {% for timer in timers %}
+      <h3> {{timer.timer_task}}</h3>
+    {% endfor%}
     <br>
     <br>
     <br>
